@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-06-2005 added: Next/Prev picture works when zoomed in.  Slideshow mode needs a rewrite - zooming is unpredictable at best in slideshow mode.  Pays to pause before zooming.
  - 25-06-2005 fixed: MACDll.dll had paths limited to 259 characters.
  - 25-06-2005 fixed: 6 ch AAC playback with PAPlayer would crash/play slowly.
  - 25-06-2005 added: hidden setting to alter the background colour during video playback (see settings.xml, tag is <BlackBarColour> - this specifies the greyscale value used.)
